// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registry Breadcrumb when is not rootRoute renders 1`] = `
<div
  class="gl-breadcrumbs"
>
  <ol
    class="breadcrumb gl-breadcrumb-list"
  >
     
    <li
      class="breadcrumb-item gl-breadcrumb-item"
    >
      <a
        class=""
        href="/"
        target="_self"
      />
    </li>
     
    <span
      class="gl-breadcrumb-separator"
      data-testid="separator"
    >
      <svg
        aria-hidden="true"
        class="gl-icon s8"
        data-testid="angle-right-icon"
        role="img"
      >
        <use
          href="#angle-right"
        />
      </svg>
    </span>
    <li
      class="breadcrumb-item gl-breadcrumb-item"
    >
      <a
        class=""
        href="#"
        target="_self"
      />
    </li>
     
    <!---->
  </ol>
</div>
`;

exports[`Registry Breadcrumb when is rootRoute renders 1`] = `
<div
  class="gl-breadcrumbs"
>
  <ol
    class="breadcrumb gl-breadcrumb-list"
  >
     
    <li
      class="breadcrumb-item gl-breadcrumb-item"
    >
      <a
        class=""
        href="/"
        target="_self"
      />
    </li>
     
    <!---->
  </ol>
</div>
`;
